--- a/index.ipynb
+++ b/index.ipynb
@@ -58,8 +58,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    number = len()\n",
-    "    pass"
+    "    number = len(travel_destinations)\n",
+    "    "
    ]
   },
   {
