--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    first = travel_destinations(0)\n",
+    "    first = travel_destinations(0\n",
     "    return first"
    ]
   },
