--- a/index.ipynb
+++ b/index.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fave = print['Madagascar\n",
-    "            ']"
+    "    fave = print['Madagascar']\n",
+    "    return fave"
    ]
   },
   {
