--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fave = t\n",
+    "    fave = travel_destinations.append\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
