--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fave = travel_destinations.append['Madagas']\n",
+    "    fave = travel_destinations.append['Madagascar']\n",
+    "    return fave\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
