Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,14 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'croatia'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fave = travel_destinations.append['Madagascar']\n",
-    "    return fave\n",
+    "    fave = travel_d\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
