--- a/index.ipynb
+++ b/index.ipynb
@@ -203,8 +203,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    fave = travel_d\n",
+    "de favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
