--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,8 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "de favorite_destination()\n",
+    "favorite_destination()\n",
+    "travel_destinations\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
