--- a/index.ipynb
+++ b/index.ipynb
@@ -205,6 +205,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "travel_destinations.append('Madagascar')\n",
     "favorite_destination()\n",
     "travel_destinations.append('Madagascar')\n",
     "travel_destinations[-1] # 'madagascar'"
