--- a/index.ipynb
+++ b/index.ipynb
@@ -205,8 +205,8 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "travel_destinations.append('Madagascar')\n",
-    "favorite_destination()\n",
+    "def favorite_destination():\n",
+    "    fave = travel_destinations.append['Madagascar']\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
