--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    fave = travel_destinations.append['Madagascar']\n",
+    "    fave = travel_destinations.append('Madagascar')\n",
+    "    \n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
