--- a/index.ipynb
+++ b/index.ipynb
@@ -207,8 +207,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    fave = travel_destinations.append('Madagascar')\n",
-    "    \n",
-    "travel_destinations[-1] # 'madagascar'"
+    "    return travel_destinations[-1] # 'madagascar'"
    ]
   },
   {
