Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,15 +187,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.favorite_destination()>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    fave = travel_destinations.append('Madagascar')\n",
     "    return travel_destinations[-1] \n",
-    "favorite_# 'madagascar'"
+    "trae# 'madagascar'"
    ]
   },
   {
