--- a/index.ipynb
+++ b/index.ipynb
@@ -218,13 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    big = "
+    "    big = travel_destinations.title\n",
+    "    return big"
    ]
   },
   {
