--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    big = tra\n",
+    "    big = []\n",
+    "    for countries in travel_destination\n",
     "    return big"
    ]
   },
