--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    big = []\n",
-    "    for countries in travel_destination\n",
+    "    for countries in travel_destinations = travel_destinations.append\n",
     "    return big"
    ]
   },
