--- a/index.ipynb
+++ b/index.ipynb
@@ -218,15 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-44caeb297d2a>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-30-e3bc00c79193>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-44caeb297d2a>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destination in travel_destinations = capitalize_countries.append(destination.title())\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-e3bc00c79193>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for destination in travel_destinations = big.append(destination.title())\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    big = []\n",
-    "    for destination in travel_destinations = capitalize_countries.append(destination.title())\n",
+    "    for destination in travel_destinations = big.append(destination.title())\n",
     "    return big"
    ]
   },
