Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    big = []\n",
-    "    for destination in travel_destinations = big.append(destination.title())\n",
+    "    for destination in travel_destinations  big.append(destination.title())\n",
     "    return big"
    ]
   },
